<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="com.elfak.mosis.sportsoutdoors.RegisterActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent" android:gravity="center_horizontal"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.elfak.mosis.sportsoutdoors.RegisterActivity">

        <!-- Login progress -->
        <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" android:visibility="gone" />

        <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="false">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/userPhotoImageView"
                        android:minHeight="170dp"
                        android:minWidth="150dp"
                        android:maxHeight="170dp"
                        android:maxWidth="150dp"
                        android:src="@android:drawable/sym_def_app_icon" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        >

                        <Button android:id="@+id/camera_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Take photo"
                            android:textStyle="bold"
                            android:onClick="launchCamera"
                            android:layout_gravity="center_horizontal"
                            android:gravity="center_vertical"/>






                    </LinearLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView android:id="@+id/username_register" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_username"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/password_register" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/prompt_password"
                        android:imeActionId="@+id/login"

                        android:imeOptions="actionUnspecified" android:inputType="textPassword"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/first_name_register" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/first_name"
                        android:imeActionId="@+id/login"

                        android:imeOptions="actionUnspecified" android:inputType="textPersonName"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/last_name_register" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/last_name"
                        android:imeActionId="@+id/login"

                        android:imeOptions="actionUnspecified" android:inputType="textPersonName"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText android:id="@+id/phone_number_register" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="@string/phone_number"
                        android:imeActionId="@+id/login"

                        android:imeOptions="actionUnspecified" android:inputType="phone"
                        android:maxLines="1" android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>







                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:weightSum="1"
                    android:layout_gravity="center_horizontal">

                    <Button android:id="@+id/button_register_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_register_ok"
                        android:textStyle="bold" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/button_register_back"
                        android:id="@+id/button_register_back"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/textView"
            android:layout_gravity="right" />
    </LinearLayout>



</RelativeLayout>
